hphp/test/zend/good/tests/classes/type_hinting_003.php.expectf
Test::f1()
varray(1) {
  int(42)
}
Test::f2()
NULL
Test::f2()
NULL
Test::f3()
varray(0) {
}
Test::f4()
varray(1) {
  int(25)
}

Catchable fatal error: Argument 1 passed to Test::f1() must be an instance of HH\varray, int given in %s/type_hinting_003.php on line 35
